--- a/WebRoot/WEB-INF/classes/Copy of project.properties
+++ b/WebRoot/WEB-INF/classes/Copy of project.properties
@@ -1,23 +1,23 @@
 #server1 nginx 172.30.0.10
-nginx.host=192.168.25.130
+nginx.host=172.30.0.10
 nginx.userName=root
-nginx.password=wangyao
+nginx.password=yhy5588&&$%
 
 #server2 zookeeper 172.20.0.11
-zookeeper.host=192.168.25.130
+zookeeper.host=172.20.0.11
 zookeeper.userName=root
-zookeeper.password=wangyao
+zookeeper.password=NETB8JNU3LbCzvJ1
 scanPath=/home/cis-service
 scanTXTPath=/home/cis-service/md5.txt
 
-#-----------deploy-zookeeper-nginx---------
+#-----------deploy-----------
 #temp path
 deploy.tempPath=/home/tempPath
 deploy.propertiesPath=/home/properties
 #zookeeper
 #eight service
 zookeeper.mi-service-app=/home/deploy_service/mi-service-app
-zookeeper.mi-service-app-port=10001
+zookeeper.mi-service-app-port=1
 
 zookeeper.mi-service-base=/home/deploy_service/mi-service-base
 zookeeper.mi-service-base.port=2
@@ -42,14 +42,14 @@ zookeeper.mi-service-uum.port=8
 
 #jetty
 zookeeper.osp=/home/osp/webapps/ROOT
-zookeeper.osp.port=9001
+zookeeper.osp.port=9
 zookeeper.uum=/home/uum/webapps/ROOT
-zookeeper.uum.port=9002
+zookeeper.uum.port=10
 
 #nginx
 #third jetty
 nginx.mi-web-smart=/home/mi-api-nhl-member/webapps/ROOT
-nginx.mi-web-smart.port=9003
+nginx.mi-web-smart.port=11
 
 nginx.mi-api-nhl-smart=/home/mi-api-nhl-smart/webapps/ROOT
 nginx.mi-api-nhl-smart.port=12
@@ -65,7 +65,7 @@ nginx.newhealthylife.ipa=/home/apache-tomcat-7.0.47/webapps/ROOT/download
 nginx.nhl.smart.ipa=/home/apache-tomcat-7.0.47/webapps/ROOT/download
 
 #localhost test
-#zookeeper.host=192.168.25.130
+#zookeeper.host=192.168.25.129
 #zookeeper.userName=wangyao
 #zookeeper.password=wangyao
 #scanPath=/home/wangyao/program/python/md5/*
