--- a/WebRoot/WEB-INF/classes/project.properties
+++ b/WebRoot/WEB-INF/classes/project.properties
@@ -10,14 +10,14 @@ zookeeper.password=wangyao
 scanPath=/home/cis-service
 scanTXTPath=/home/cis-service/md5.txt
 
-#-----------deploy-----------
+#-----------deploy-zookeeper-nginx---------
 #temp path
 deploy.tempPath=/home/tempPath
 deploy.propertiesPath=/home/properties
 #zookeeper
 #eight service
 zookeeper.mi-service-app=/home/deploy_service/mi-service-app
-zookeeper.mi-service-app-port=1
+zookeeper.mi-service-app-port=10001
 
 zookeeper.mi-service-base=/home/deploy_service/mi-service-base
 zookeeper.mi-service-base.port=2
@@ -42,14 +42,14 @@ zookeeper.mi-service-uum.port=8
 
 #jetty
 zookeeper.osp=/home/osp/webapps/ROOT
-zookeeper.osp.port=9
+zookeeper.osp.port=9001
 zookeeper.uum=/home/uum/webapps/ROOT
-zookeeper.uum.port=10
+zookeeper.uum.port=9002
 
 #nginx
 #third jetty
 nginx.mi-web-smart=/home/mi-api-nhl-member/webapps/ROOT
-nginx.mi-web-smart.port=11
+nginx.mi-web-smart.port=9003
 
 nginx.mi-api-nhl-smart=/home/mi-api-nhl-smart/webapps/ROOT
 nginx.mi-api-nhl-smart.port=12
