--- a/src/project.properties
+++ b/src/project.properties
@@ -17,7 +17,7 @@ deploy.propertiesPath=/home/properties
 #zookeeper
 #eight service
 zookeeper.mi-service-app=/home/deploy_service/mi-service-app
-zookeeper.mi-service-app-port=10001
+zookeeper.mi-service-app.port=10001
 
 zookeeper.mi-service-base=/home/deploy_service/mi-service-base
 zookeeper.mi-service-base.port=2
