增加备份上传文件功能

--- a/WebRoot/WEB-INF/classes/project.properties
+++ b/WebRoot/WEB-INF/classes/project.properties
@@ -7,6 +7,7 @@ nginx.password=wangyao
 zookeeper.host=192.168.25.130
 zookeeper.userName=root
 zookeeper.password=wangyao
+backupPath=/home/backupFile
 scanPath=/home/cis-service
 scanTXTPath=/home/cis-service/md5.txt
 
